syntax = "proto2";
package main;

message Request {
  enum Type {
    SEND_TRANSACTION = 0;
    UPDATE_PEER = 1;
  }

  required Type type = 1;
  optional SendTransaction sendTransaction = 2;
  optional UpdatePeer updatePeer = 3;
}

message SendTransaction {
  required bytes data = 1;
  required int64 created = 2;
  required bytes id = 3;
}

message UpdatePeer {
  optional bytes userHandle = 1;
}